Add authentication and roles
